feat: drop the Paper requirement, supporting Bukkit 1.8.0 and up (#211)
Drops the Paper requirement. The plugin now compiles against the Bukkit
API at
**1.8.0** — the oldest `spigot-api` published anywhere — and runs on
Bukkit, Spigot,
Paper and their forks from one JAR.

## What made it possible

The Paper-only surface was 16 lines across 3 files. `PlayerChat` used
Paper's
`AsyncChatEvent`, `Lang` returned Components that reached players
through Paper's
`sendMessage(Component)`, and `Platform` existed to fail politely when
Paper was
absent. Everything else was already plain Bukkit.

Chat moved to `AsyncPlayerChatEvent`, which exists on every version from
1.7 and
which Paper still fires. Adventure is now bundled and sent through
`BukkitAudiences`
rather than borrowed from Paper — flattening to legacy colour codes
would have been
the smaller change and the wrong one, since `lang.yml` documents hex,
gradients,
click and hover, and every server in the live metrics is 1.19+.

Java 8 is mandatory for 1.13–1.16, so 15 records became final classes
and three
shims replace JDK 9–11 APIs: `Strings`, `Io` and `Http`.

## Three files are version-gated, four with achievements

`BlockExplodeEvent` (1.8.3), `PlayerAdvancementDoneEvent` (1.12) and
`PlayerCommandSendEvent` (1.13) cannot be named on a server that lacks
them, so
`util.Compat` builds them by name. Only construction is reflective; the
handlers stay
ordinary compiled code with working tests.

Achievements are now logged on 1.8–1.14 under the same
`log.player.advancement`
switch, so "supports 1.8" means the full feature set rather than the
full set minus
one.

## What CI now proves

- `compat-floor` compiles at **1.8.0** with the gated files excluded.
Without the
profile it fails with 16 errors, so the exclusion list is load-bearing.
- `bukkit-api` compiles against **pure `org.bukkit:bukkit`**. Paper
implements Spigot
implements Bukkit, so what compiles against the smallest runs on all
three, and one
  `Bukkit.spigot()` c