@@ -7,6 +7,7 @@ import org.bukkit.configuration.ConfigurationSection;
 import org.bukkit.plugin.java.JavaPlugin;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 
@@ -60,7 +61,7 @@ public final class Test implements Subcommand {
      */
     @Override
     public List<String> tabComplete(CommandSender sender, String[] args) {
-        if (args.length > 1) return List.of();
+        if (args.length > 1) return Collections.emptyList();
         final List<String> out = new ArrayList<>();
         final ConfigurationSection log = plugin.getConfig().getConfigurationSection("log");
         if (log != null) {
