@@ -1,5 +1,7 @@
 package com.discordlogger.config;
 
+import com.discordlogger.util.Io;
+import com.discordlogger.util.Strings;
 import org.bukkit.plugin.java.JavaPlugin;
 import org.yaml.snakeyaml.Yaml;
 
@@ -8,6 +10,8 @@ import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -38,7 +42,21 @@ public final class ConfigMigrator {
     }
 
     /** Outcome plus the two schema numbers, for messaging. Either may be null when UNKNOWN. */
-    public record Result(Status status, Integer installed, Integer shipped) {
+    public static final class Result {
+        private final Status status;
+        private final Integer installed;
+        private final Integer shipped;
+
+        public Result(Status status, Integer installed, Integer shipped) {
+            this.status = status;
+            this.installed = installed;
+            this.shipped = shipped;
+        }
+
+        public Status status()     { return status; }
+        public Integer installed() { return installed; }
+        public Integer shipped()   { return shipped; }
+
         public boolean migrated() { return status == Status.UPGRADED; }
     }
 
@@ -84,14 +102,29 @@ public final class ConfigMigrator {
         // aligned with defLines. Lists change the line count, so they are collected
         // and spliced afterwards from the bottom up — applying them top-down would
         // invalidate every index after the first splice.
-        record ListEdit(int from, int to, List<String> block) {}
+        final class ListEdit {
+            private final int from;
+            private final int to;
+            private final List<String> block;
+
+            ListEdit(int from, int to, List<String> block) {
+                this.from = from;
+                this.to = to;
+                this.block = block;
+            }
+
+            int from() { return from; }
+            int to() { return to; }
+            List<String> block() { return block; }
+        }
         final List<ListEdit> listEdits = new ArrayList<>();
 
         for (Map.Entry<String, Object> e : usrMap.entrySet()) {
             String target = resolvePath(e.getKey(), defMap, fromVersion, toVersion);
             if (target == null) continue;  // genuinely removed -> keep the default
 
-            if (e.getValue() instanceof List<?> userList) {
+            if (e.getValue() instanceof List<?>) {
+                final List<?> userList = (List<?>) e.getValue();
                 final int[] span = listSpanInDefault(defLines, target);
                 if (span != null) {
                     listEdits.add(new ListEdit(span[0], span[1],
@@ -136,9 +169,9 @@ public final class ConfigMigrator {
         int end = pos.index() + 1;
         while (end < lines.size()) {
             final String line = lines.get(end);
-            if (line.isBlank()) break;
+            if (Strings.isBlank(line)) break;
             if (leadingSpaces(line) <= pos.keyIndent()) break;
-            if (!line.strip().startsWith("-")) break;
+            if (!Strings.strip(line).startsWith("-")) break;
             end++;
         }
         return new int[]{pos.index(), end};
@@ -161,12 +194,12 @@ public final class ConfigMigrator {
         final Map<String, String> comments = new LinkedHashMap<>();
         for (int i = 1; i < defaultBlock.size(); i++) {
             final String line = defaultBlock.get(i);
-            final String trimmed = line.strip();
+            final String trimmed = Strings.strip(line);
             if (!trimmed.startsWith("-")) continue;
             final String afterDash = trimmed.substring(1);
             final int hash = findUnquotedHash(afterDash, 0);
             if (hash < 0) continue;
-            final String value = afterDash.substring(0, hash).strip();
+            final String value = Strings.strip(afterDash.substring(0, hash));
             if (value.isEmpty()) continue;
             // Keep the original spacing between the value and its comment, so an
             // unchanged file round-trips byte for byte rather than being reindented.
@@ -183,7 +216,7 @@ public final class ConfigMigrator {
             return out;
         }
         out.add(key + comment);
-        final String indent = " ".repeat(keyIndent + 2);
+        final String indent = Strings.repeat(" ", keyIndent + 2);
         for (Object v : values) {
             final String rendered = renderListItem(v);
             final String itemComment = comments.get(rendered);
@@ -203,8 +236,9 @@ public final class ConfigMigrator {
      * number rather than the command name someone typed.
      */
     private static String renderListItem(Object v) {
-        if (!(v instanceof String s)) return renderScalar(v);
-        if (s.isEmpty() || !s.equals(s.strip())) return renderScalar(s);
+        if (!(v instanceof String)) return renderScalar(v);
+        final String s = (String) v;
+        if (s.isEmpty() || !s.equals(Strings.strip(s))) return renderScalar(s);
         if (PLAIN_SAFE.matcher(s).matches() && !YAML_RESERVED.matcher(s).matches()) return s;
         return renderScalar(s);
     }
@@ -242,13 +276,13 @@ public final class ConfigMigrator {
     public static boolean setScalar(File configFile, String path, Object value) {
         try {
             List<String> lines = new ArrayList<>(
-                    Arrays.asList(Files.readString(configFile.toPath(), StandardCharsets.UTF_8)
+                    Arrays.asList(Io.readString(configFile.toPath())
                             .split("\r?\n", -1)));
-            List<String> reference = List.copyOf(lines);
+            List<String> reference = Collections.unmodifiableList(new ArrayList<>(lines));
             if (findLeafLine(reference, path) == null) return false;
 
             replaceLeafValueInDefault(lines, reference, path, value);
-            Files.writeString(configFile.toPath(), String.join("\n", lines),
+            Io.writeString(configFile.toPath(), String.join("\n", lines),
                     StandardCharsets.UTF_8,
                     StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
             return true;
@@ -267,7 +301,7 @@ public final class ConfigMigrator {
     public static Integer shippedVersion(JavaPlugin plugin, String resourcePath) {
         try (InputStream in = plugin.getResource(resourcePath)) {
             if (in == null) return null;
-            return extractVersion(new String(in.readAllBytes(), StandardCharsets.UTF_8));
+            return extractVersion(Io.readString(in));
         } catch (Exception ex) {
             return null;
         }
@@ -284,7 +318,7 @@ public final class ConfigMigrator {
                     plugin.getLogger().warning("Default resource not found: " + resourcePath);
                     return new Result(Status.UNKNOWN, null, null);
                 }
-                defaultText = new String(in.readAllBytes(), StandardCharsets.UTF_8);
+                defaultText = Io.readString(in);
             }
             final Map<String, Object> defFlat = flattenYaml(new Yaml().load(defaultText));
             final Integer newVer = detectVersion(defaultText, defFlat, m -> {});
@@ -292,13 +326,13 @@ public final class ConfigMigrator {
             // If user file missing → write default and return (fresh install; no migration)
             if (!userFile.exists()) {
                 Files.createDirectories(userFile.getParentFile().toPath());
-                Files.writeString(userFile.toPath(), defaultText, StandardCharsets.UTF_8,
+                Io.writeString(userFile.toPath(), defaultText, StandardCharsets.UTF_8,
                         StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
                 return new Result(Status.FRESH_INSTALL, newVer, newVer);
             }
 
             // Read user's current config (verbatim)
-            final String userText = Files.readString(userFile.toPath(), StandardCharsets.UTF_8);
+            final String userText = Io.readString(userFile.toPath());
             Map<String, Object> userFlat;
             try {
                 userFlat = flattenYaml(new Yaml().load(userText));
@@ -328,7 +362,7 @@ public final class ConfigMigrator {
             final String base = stripExtension(userFile.getName());
 
             File newFile = new File(userFile.getParentFile(), base + ".new.yml");
-            Files.writeString(newFile.toPath(), merged, StandardCharsets.UTF_8,
+            Io.writeString(newFile.toPath(), merged, StandardCharsets.UTF_8,
                     StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
 
             // Rotate: <name>.yml -> <name>.old.yml, new -> <name>.yml
@@ -561,11 +595,11 @@ public final class ConfigMigrator {
         // search for "leafKey:" at expectedIndent
         for (int idx = i; idx < lines.size(); idx++) {
             String ln = lines.get(idx);
-            if (ln.strip().isEmpty() || ln.strip().startsWith("#")) continue;
+            if (Strings.strip(ln).isEmpty() || Strings.strip(ln).startsWith("#")) continue;
             int ind = leadingSpaces(ln);
             if (ind < expectedIndent) break;      // out of section
             if (ind > expectedIndent) continue;   // deeper child
-            String trimmed = ln.strip();
+            String trimmed = Strings.strip(ln);
             if (trimmed.startsWith(leafKey + ":")) {
                 return new LeafPos(idx, expectedIndent);
             }
@@ -577,11 +611,11 @@ public final class ConfigMigrator {
     private static int findSectionHeader(List<String> lines, int from, int indent, String key) {
         for (int i = from; i < lines.size(); i++) {
             String ln = lines.get(i);
-            if (ln.strip().isEmpty() || ln.strip().startsWith("#")) continue;
+            if (Strings.strip(ln).isEmpty() || Strings.strip(ln).startsWith("#")) continue;
             int ind = leadingSpaces(ln);
             if (ind < indent) return -1;
             if (ind != indent) continue;
-            String trimmed = ln.strip();
+            String trimmed = Strings.strip(ln);
             if (trimmed.startsWith(key + ":")) return i;
         }
         return -1;
@@ -631,8 +665,9 @@ public final class ConfigMigrator {
     /** The version the file claims: the config-version key first, else the trailer. */
     private static Integer declaredVersion(String text, Map<String, Object> flat) {
         final Object key = flat == null ? null : flat.get("config-version");
-        if (key instanceof Number n) return n.intValue();
-        if (key instanceof String str) {
+        if (key instanceof Number) return ((Number) key).intValue();
+        if (key instanceof String) {
+            final String str = (String) key;
             try {
                 return Integer.parseInt(str.trim());
             } catch (NumberFormatException ignored) {
@@ -649,5 +684,16 @@ public final class ConfigMigrator {
     }
 
     /** Simple struct for leaf position. */
-    private record LeafPos(int index, int keyIndent) {}
+    private static final class LeafPos {
+        private final int index;
+        private final int keyIndent;
+
+        LeafPos(int index, int keyIndent) {
+            this.index = index;
+            this.keyIndent = keyIndent;
+        }
+
+        int index() { return index; }
+        int keyIndent() { return keyIndent; }
+    }
 }
