@@ -5,6 +5,7 @@ import org.bukkit.configuration.ConfigurationSection;
 import org.bukkit.plugin.java.JavaPlugin;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 
@@ -34,12 +35,24 @@ import java.util.Locale;
 public final class CustomLogs {
 
     /** One admin-defined rule. */
-    public record Rule(
-            String name,
-            List<String> match,
-            String title,
-            String message
-    ) {
+    public static final class Rule {
+        private final String name;
+        private final List<String> match;
+        private final String title;
+        private final String message;
+
+        public Rule(String name, List<String> match, String title, String message) {
+            this.name = name;
+            this.match = match;
+            this.title = title;
+            this.message = message;
+        }
+
+        public String name()         { return name; }
+        public List<String> match()  { return match; }
+        public String title()        { return title; }
+        public String message()      { return message; }
+
         /**
          * The category this logs under, which is also how {@code Log} finds its colour
          * and webhook — {@code log.custom.<name>} is walked by exactly the same code
@@ -51,7 +64,7 @@ public final class CustomLogs {
         }
     }
 
-    private static volatile List<Rule> rules = List.of();
+    private static volatile List<Rule> rules = Collections.emptyList();
 
     private CustomLogs() {}
 
@@ -99,7 +112,7 @@ public final class CustomLogs {
             }
         }
 
-        rules = List.copyOf(parsed);
+        rules = Collections.unmodifiableList(new ArrayList<>(parsed));
         if (!parsed.isEmpty()) {
             plugin.getLogger().info("Custom logs active: " + parsed.size() + " rule(s).");
         }
@@ -138,7 +151,7 @@ public final class CustomLogs {
      * typing the long form.
      */
     public static List<String> words(String s) {
-        if (s == null) return List.of();
+        if (s == null) return Collections.emptyList();
         final List<String> out = new ArrayList<>();
         for (String w : s.trim().split("\\s+")) {
             if (!w.isEmpty()) out.add(w.toLowerCase(Locale.ROOT));
